# CasADi_mpc_ros_example

./: README.md
casadi_mpc/: CMakeLists.txt  package.xml
casadi_mpc/include/casadi_mpc/: casadi_mpc_template.hpp  matplotlibcpp.h
casadi_mpc/src/: cartpole_nmpc.cpp  inverted_pendulum_mpc.cpp
